# perplex-cli

./: README.md
backend/: agent.py  base_agent.py  conversation_storage.py  conversations.db  conversations.db-shm  conversations.db-wal  main.py  models.py  pyproject.toml  specialized_agents.py  start.py  tools.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatInterface.css  ChatInterface.tsx  Layout.css  Layout.tsx  LoadingError.css  ResponseDisplay.css  ResponseDisplay.tsx  Sidebar.css  Sidebar.tsx
frontend/src/pages/: FinancePage.tsx  GeneralPage.tsx  SportsPage.tsx
frontend/src/services/: api.ts  conversationStorage.ts
frontend/src/types/: api.ts
